--- a/index.html
+++ b/index.html
@@ -74,11 +74,37 @@
              </div>
 
              <!-- Grid card -->
-              <div class="grid grid-cols-4 gap-4 text-center">
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
                 <!-- Product Card -->
                  <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
-
+                    <img src="./images/tea-1.png" class="mx-auto pt-4" alt="">
+                 <div class="p-4">
+                    <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
                  </div>
+                 </div>
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="./images/tea-2.png" class="mx-auto pt-4" alt="">
+                 <div class="p-4">
+                    <h2 class="font-bold text-xl">Black Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                 </div>
+                 </div>
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="./images/tea-3.png" class="mx-auto pt-4" alt="">
+                 <div class="p-4">
+                    <h2 class="font-bold text-xl">Green Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                 </div>
+                 </div>
+                 <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img src="./images/tea-4.png" class="mx-auto pt-4" alt="">
+                 <div class="p-4">
+                    <h2 class="font-bold text-xl">Lemon Tea</h2>
+                    <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                 </div>
+                 </div>
+
               </div>
           </section>
 
