--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+              },
+              fontFamily:{
+                manrope: ['Manrope', 'sans-serif'],
               }
             }
           }
@@ -29,7 +32,7 @@
 
 </head>
 
-<body>
+<body class="font-manrope">
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
 
@@ -42,7 +45,7 @@
                     <br>
                     <p class="text-gray-500 w-3/4">Tea and Botanical Solutions 
                         Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold"> Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
+                    <button class="bg-gradient-to-r mt-5 from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold"> Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
             </div>
             <!-- image content -->
              <div class="relative">
@@ -207,8 +210,75 @@
                 </div>
             </section>
 
-    </main>
 
+         
+
+    </main>
+   <!-- footer section -->
+   <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+    <div class="w-9/12 mx-auto">
+        <!-- logo -->
+         <div class="mb-8 flex justify-between">
+            <img class="mb-8" src="./images/cup.png" alt="">
+            <div class="flex items-center gap-2">
+                <h4>Ready to get started?</h4>
+                <button class="bg-gradient-to-r text-white from-orange-500 to-red-500 px-3 py-2 rounded-lg">Get Started</button>
+            </div>
+         </div>
+         <!-- Links -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <!-- first column  -->
+             <div>
+                <h3 class="text-lg font-semibold mb-3">Quick Links</h3>
+                <ul class="space-y-2">
+                    <li class="hover:text-orange-600"><a href="#">Home</a></li>
+                    <li class="hover:text-orange-600"><a href="#">About</a></li>
+                    <li class="hover:text-orange-600"><a href="#">Insurance</a></li>
+                    <li class="hover:text-orange-600"><a href="#">Privacy Policy</a></li>
+                </ul>
+             </div>
+            <!-- second column  -->
+             <div>
+                <h3 class="text-lg font-semibold mb-3">Our Services</h3>
+                <ul class="space-y-2">
+                    <li class="hover:text-orange-600"><a href="#">Home</a></li>
+                    <li class="hover:text-orange-600"><a href="#">About</a></li>
+                    <li class="hover:text-orange-600"><a href="#">Insurance</a></li>
+                    <li class="hover:text-orange-600"><a href="#">Privacy Policy</a></li>
+                </ul>
+             </div>
+            <!-- third column  -->
+             <div>
+                <h3 class="text-lg font-semibold mb-3">Help</h3>
+                <ul class="space-y-2">
+                    <li class="hover:text-orange-600"><a href="#">Home</a></li>
+                    <li class="hover:text-orange-600"><a href="#">About</a></li>
+                </ul>
+             </div>
+            <!-- fourth column  -->
+             <div>
+                <h3 class="text-lg font-semibold mb-3">Subscribe to our newsletter</h3>
+                <div class="flex flex-col space-y-2">
+                    <div>
+                        <input class="bg-transparent border-b-2 border-black w-4/5 md:w-9/12" type="text" placeholder="Email Address">
+                    <i class="fa-solid fa-chevron-right w-7 h-7  bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
+                <div class="flex justify-between w-2/5 mb-2 mt-8">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-twitter"></i>
+
+                </div>   
+                </div>
+
+                </div>
+             </div>
+          </div>
+
+          <div class="text-center pt-4 mt-4">
+            <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+          </div>
+    </div>
+   </footer>
 
 </body>
 
