add news and events section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="font-manrope">
+<body class="font-manrope  ">   
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
 
@@ -210,7 +210,43 @@
                 </div>
             </section>
 
-
+            <!-- news and events section -->
+            <section class="my-24">
+                <!-- text -->
+                 <div class="text-center mb-11">
+                    <h1 class="text-4xl mb-5 font-bold">News & Events</h1>
+                    <p class="text-gray-600 w-9/12 mx-auto ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or 
+                        randomised words which don't look even slightly believable. </p>
+                 </div>
+                 <!-- card section -->
+                  <div class="grid  md:grid-cols-2 lg:grid-cols-3 gap-5">
+                    <!-- first card -->
+                     <div class="shadow-lg bg-white p-3 rounded-lg ">
+                        <img src="./images/news-1.png" class="mb-2"  alt="">
+                        <p class="text-gray-600 mb-2">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold w-9/12 mb-3">Collecting 8 points for discount</h2>
+                        <p class="text-gray-600 w-2/3 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-[16px] font-bold"><a href="">Learn More</a></h3>
+                    </div>
+                    <!-- second card -->
+                     <div class="shadow-lg bg-white p-3 rounded-lg ">
+                        <img src="./images/news-2.png" class="mb-2"  alt="">
+                        <p class="text-gray-600 mb-2">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold w-9/12 mb-3">Collecting 8 points for discount</h2>
+                        <p class="text-gray-600 w-2/3 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-[16px] font-bold"><a href="">Learn More</a></h3>
+                    </div>
+                    <!-- third card -->
+                     <div class="shadow-lg bg-white p-3 rounded-lg ">
+                        <img src="./images/news-3.png" class="mb-2"  alt="">
+                        <p class="text-gray-600 mb-2">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold w-9/12 mb-3">Collecting 8 points for discount</h2>
+                        <p class="text-gray-600 w-2/3 mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-[16px] font-bold"><a href="">Learn More</a></h3>
+                    </div>
+                    
+                  </div>
+            </section>
          
 
     </main>
